Few more commits

--- a/class-02-jquery-and-events/pair-assignment/shruti-austin-laura-02/index.html
+++ b/class-02-jquery-and-events/pair-assignment/shruti-austin-laura-02/index.html
@@ -16,7 +16,8 @@
       <p>The shocking power of static pages</p>
     </header>
 
-    <nav class="main-nav">
+    <nav class="main-nav icon-menu">
+
       <ul>
         <!-- TODO: Use one of the icons from the available set for each of these nav items... -->
         <li class="tab icon-rocket" data-content="articles"><a href="#"> Home</a></li>
