--- a/class-07-functional-programming/pair-assignment/shruti-stephanie07/index.html
+++ b/class-07-functional-programming/pair-assignment/shruti-stephanie07/index.html
@@ -83,11 +83,13 @@
     <script src="/scripts/article.js"></script>
     <script src="/scripts/articleView.js"></script>
     <script>
-      // TODO: The fetchAll method call now requires a callback parameter.
+      // DONE: The fetchAll method call now requires a callback parameter.
       // What do we want to run WHEN this method is done?
-      // Article.fetchAll('load',function(){
-      //
-      // }); // Add an argument to the function call.
+      Article.fetchAll('load',function(rawData){
+        Article.numWordsAll();
+        Article.allAuthors();
+        Article.numWordsByAuthor();
+      }); // Add an argument to the function call.
     </script>
   </body>
 </html>
