Completed Functions on article.js

--- a/class-07-functional-programming/pair-assignment/shruti-stephanie07/admin.html
+++ b/class-07-functional-programming/pair-assignment/shruti-stephanie07/admin.html
@@ -34,8 +34,8 @@
     <main class="clearfix">
       <h1>Blog Stats</h1>
       <section id="blog-stats">
-        <dt>Total articles:</dt><dd class="articles">{{Article.all.length}}</dd>
-        <dt>Total words:</dt> <dd class="words">{{Article.numWordsAll}}</dd>
+        <dt>Total articles:</dt><dd class="articles"></dd>
+        <dt>Total words:</dt> <dd class="words"></dd>
         <h2>Author Stats</h2>
         <p><em>Details on who is writing, and how much writing they are doing...</em></p>
         <ul class="author-stats">
