--- a/class-07-functional-programming/pair-assignment/shruti-stephanie07/index.html
+++ b/class-07-functional-programming/pair-assignment/shruti-stephanie07/index.html
@@ -76,20 +76,19 @@
     <footer>
       &copy; 2016 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
+    <script src="vendor/scripts/highlight.pack.js"></script>
+    <script src="vendor/scripts/jquery-2.1.4.js"></script>
+    <script src="vendor/scripts/handlebars.js"></script>
+    <script src="vendor/scripts/marked.js"></script>
 
-    <script src="/vendor/scripts/jquery-2.1.4.js"></script>
-    <script src="/vendor/scripts/handlebars.js"></script>
-    <script src="/vendor/scripts/marked.js"></script>
-    <script src="/scripts/article.js"></script>
-    <script src="/scripts/articleView.js"></script>
+    <script src="scripts/article.js"></script>
+    <script src="scripts/articleView.js"></script>
     <script>
       // DONE: The fetchAll method call now requires a callback parameter.
       // What do we want to run WHEN this method is done?
-      Article.fetchAll('load',function(rawData){
-        Article.numWordsAll();
-        Article.allAuthors();
-        Article.numWordsByAuthor();
-      }); // Add an argument to the function call.
+      Article.fetchAll(); // Add an argument to the function call.
+
+      // Article.fetchAll(articleView.
     </script>
   </body>
 </html>
