--- a/class-07-functional-programming/pair-assignment/shruti-stephanie07/admin.html
+++ b/class-07-functional-programming/pair-assignment/shruti-stephanie07/admin.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="/styles/layout.css">
     <link rel="stylesheet" href="/styles/modules.css">
     </head>
+
     <!-- DONE: Setup a template for each row of the Author Stats section of this page: -->
     <script id="author-template" type="text/x-handlebars-template">
-      <li><strong>{{name}}</strong>: {{numWords}} words written</li>
+      <li><strong>{{name}}NNN</strong>: {{numWords}} words written</li>
     </script>
+
   <body>
     <header class="site-header clearfix">
       <section class="heading-group-h1 pull-left">
@@ -31,17 +33,22 @@
         </ul>
       </nav>
     </header>
+
     <main class="clearfix">
       <h1>Blog Stats</h1>
+
       <section id="blog-stats">
         <dt>Total articles:</dt><dd class="articles"></dd>
         <dt>Total words:</dt> <dd class="words"></dd>
+
+
         <h2>Author Stats</h2>
         <p><em>Details on who is writing, and how much writing they are doing...</em></p>
         <ul class="author-stats">
           <!-- DONE: Setup an unordered list to later append some stats for each author -->
         </ul>
       </section>
+
     </main>
     <footer>
       &copy; 2015 Code Fellows | Static Blog | Happy Ipsum!
