--- a/class-07-functional-programming/pair-assignment/shruti-stephanie07/index.html
+++ b/class-07-functional-programming/pair-assignment/shruti-stephanie07/index.html
@@ -86,7 +86,8 @@
     <script>
       // DONE: The fetchAll method call now requires a callback parameter.
       // What do we want to run WHEN this method is done?
-      Article.fetchAll(); // Add an argument to the function call.
+      Article.fetchAll(articleView.initAdminPage); // Add an argument to the function call.
+      Article.numWordsByAuthor();
 
       // Article.fetchAll(articleView.
     </script>
