got the data to render to the adminpage finally!

--- a/class-07-functional-programming/pair-assignment/shruti-stephanie07/admin.html
+++ b/class-07-functional-programming/pair-assignment/shruti-stephanie07/admin.html
@@ -38,7 +38,7 @@
       <h1>Blog Stats</h1>
 
       <section id="blog-stats">
-        <dt>Total articles:</dt><dd class="articles"></dd>
+        <dt>Total articles:</dt> <dd class="articles"></dd>
         <dt>Total words:</dt> <dd class="words"></dd>
 
 
@@ -62,11 +62,12 @@
     <script>
       // DONE: After we fetch and load all the articles, what view function do we want to run next?
       // Let's pass in a callback function, to determine what happens AFTER all articles are loaded.
-      Article.fetchAll('load',function(rawData){
-        Article.numWordsAll();
-        Article.allAuthors();
-        Article.numWordsByAuthor();
-      });
+      // Article.fetchAll('load',function(rawData){
+      //   Article.numWordsAll();
+      //   Article.allAuthors();
+      //   Article.numWordsByAuthor();
+      // });
+        Article.fetchAll(articleView.initAdminPage);
     </script>
   </body>
 </html>
