--- a/class-07-functional-programming/pair-assignment/shruti-stephanie07/admin.html
+++ b/class-07-functional-programming/pair-assignment/shruti-stephanie07/admin.html
@@ -13,7 +13,7 @@
 
     <!-- DONE: Setup a template for each row of the Author Stats section of this page: -->
     <script id="author-template" type="text/x-handlebars-template">
-      <li><strong>{{name}}NNN</strong>: {{numWords}} words written</li>
+      <li><strong>{{name}}</strong>: {{numWords}} words written</li>
     </script>
 
   <body>
