--- a/class-12-REST-and-APIs/pair-assignment/shruti-steph/index.html
+++ b/class-12-REST-and-APIs/pair-assignment/shruti-steph/index.html
@@ -29,11 +29,12 @@
     <script id="repo-template" type="text/x-handlebars-template">
       <li>
         <a href="{{html_url}}" target="_blank"><h3>{{name}}</h3></a>
-        <p>Description: {{}}</p>
-        <p>Language: {{}}</p>
-        <p>Created: {{}}</p>
+        <p>Description: {{description}}</p>
+        <p>Language: {{language}}</p>
+        <p>Created: {{created_at}}</p>
         <p>Last updated: {{updated_at}}</p>
-        // LOOK: A Handlebars `if` block!
+
+         <!-- // LOOK: A Handlebars `if` block! -->
         {{#if watchers_count}}
           <p>{{watchers_count}} watching this repo</p>
         {{/if}}
